5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1758_1576.log
== TEST (2019-05-23 10:56:55) 
-- CODE:
from numpy import*
a = array(eval(input("jogadas de eusapia:")
b = array(eval(uinput("jogadas de barsanulfo:")

vet = 0
vita = 0
vitb = 0

while (vet < size(vita)):
	if(vita[vet] == vitb[vet]):
		print("EUSAPIA")
	elif:
		print("BARSANULFO")
	else:
		print("EMPATE")
		
-- ERROR:
File "XXXX", line 3
    b = array(eval(uinput()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:08:33) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")
j2 = array(eval(input("jogadas de barsanulfo:")

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
					 
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("Barsanulfo")
else:
	print("EMPATE")
			
-- ERROR:
File "XXXX", line 3
    j2 = array(eval(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:08:50) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")
j2 = array(eval(input("jogadas de barsanulfo:")

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
					 
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("Barsanulfo")
else:
	print("EMPATE")
			
-- ERROR:
File "XXXX", line 3
    j2 = array(eval(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:11:53) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")
j2 = array(eval(input("jogadas de barsanulfo:")

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("Barsanulfo")
else:
	print("EMPATE")
			
-- ERROR:
File "XXXX", line 3
    j2 = array(eval(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:11:59) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")
j2 = array(eval(input("jogadas de barsanulfo:")

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("Barsanulfo")
else:
	print("EMPATE")
			
-- ERROR:
File "XXXX", line 3
    j2 = array(eval(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:12:23) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:"))
j2 = array(eval(input("jogadas de barsanulfo:"))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("Barsanulfo")
else:
	print("EMPATE")
			
-- ERROR:
File "XXXX", line 3
    j2 = array(eval(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:12:33) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("Barsanulfo")
else:
	print("EMPATE")
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:13:35) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	print(size(j1))
		if (soma1>soma2):
			print("EUSAPIA")
		elif (soma2>soma1):
			print("Barsanulfo")
		else:
			print("EMPATE")
			
-- ERROR:
File "XXXX", line 15
    if (soma1>soma2):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:13:43) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	print(size(j1))
	if (soma1>soma2):
			print("EUSAPIA")
		elif (soma2>soma1):
			print("Barsanulfo")
		else:
			print("EMPATE")
			
-- ERROR:
File "XXXX", line 17
    elif (soma2>soma1):
                      ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:13:53) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	print(size(j1))
	if (soma1>soma2):
			print("EUSAPIA")
	elif (soma2>soma1):
			print("Barsanulfo")
	else:
			print("EMPATE")
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:16:03) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	else:
		print("EMPATE")
	print(size(j1))
	if (soma1>soma2):
			print("EUSAPIA")
	elif (soma2>soma1):
			print("Barsanulfo")
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:16:50) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	else:
		print("EMPATE")
	print(size(j1))
	if (soma1>soma2):
			print("EUSAPIA")
	elif (soma2>soma1):
			print("BARSANULFO")
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:17:53) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1

	print(size(j1))
	if (soma1>soma2):
			print("EUSAPIA")
	elif (soma2>soma1):
			print("BARSANULFO")
	else:
			print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:21:06) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	else:
		print("MENSAGEM")
	i = i + 1

	print(size(j1))
	if (soma1>soma2):
			print("EUSAPIA")
	elif (soma2>soma1):
			print("BARSANULFO")
	else:
			print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:21:06) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	else:
		print("MENSAGEM")
	i = i + 1

	print(size(j1))
	if (soma1>soma2):
			print("EUSAPIA")
	elif (soma2>soma1):
			print("BARSANULFO")
	else:
			print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:21:37) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	else:
		print("MENSAGEM")
	i = i + 1

	print(size(j1))
	if (soma1>soma2):
			print("EUSAPIA")
	elif (soma2>soma1):
			print("BARSANULFO")
	else:
			print("EMPATE")
-- EXECUTION TIME:
4.15815
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
MENSAGEM
12
EMPATE
12
BARSANULFO
MENSAGEM
12
BARSANULFO
12
EMPATE
MENSAGEM
12
EMPATE
12
EUSAPIA
MENSAGEM
12
EUSAPIA
12
EUSAPIA
MENSAGEM
12
EUSAPIA
12
EUSAPIA
12
EMPATE
MENSAGEM
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
10
BARSANULFO
MENSAGEM
10
BARSANULFO
10
BARSANULFO
10
BARSANULFO
10
BARSANULFO
10
BARSANULFO
10
BARSANULFO
MENSAGEM
10
BARSANULFO
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
MENSAGEM
18
BARSANULFO
18
BARSANULFO
18
BARSANULFO
MENSAGEM
18
BARSANULFO
18
BARSANULFO
MENSAGEM
18
BARSANULFO
MENSAGEM
18
BARSANULFO
18
BARSANULFO
18
BARSANULFO
MENSAGEM
18
BARSANULFO
18
BARSANULFO
MENSAGEM
18
BARSANULFO
MENSAGEM
18
BARSANULFO
18
BARSANULFO
18
BARSANULFO
MENSAGEM
18
BARSANULFO
18
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:22:28) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	else:
		print("EMPATE")
	i = i + 1

	print(size(j1))
	if (soma1>soma2):
			print("EUSAPIA")
	elif (soma2>soma1):
			print("BARSANULFO")
	else:
			print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:22:42) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	else:
		print("EMPATE")
	i = i + 1

	print(size(j1))
	if (soma1>soma2):
			print("EUSAPIA")
	elif (soma2>soma1):
			print("BARSANULFO")
	else:
			print("EMPATE")
-- EXECUTION TIME:
4.1568
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
EMPATE
12
EMPATE
12
BARSANULFO
EMPATE
12
BARSANULFO
12
EMPATE
EMPATE
12
EMPATE
12
EUSAPIA
EMPATE
12
EUSAPIA
12
EUSAPIA
EMPATE
12
EUSAPIA
12
EUSAPIA
12
EMPATE
EMPATE
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
10
BARSANULFO
EMPATE
10
BARSANULFO
10
BARSANULFO
10
BARSANULFO
10
BARSANULFO
10
BARSANULFO
10
BARSANULFO
EMPATE
10
BARSANULFO
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
EMPATE
18
BARSANULFO
18
BARSANULFO
18
BARSANULFO
EMPATE
18
BARSANULFO
18
BARSANULFO
EMPATE
18
BARSANULFO
EMPATE
18
BARSANULFO
18
BARSANULFO
18
BARSANULFO
EMPATE
18
BARSANULFO
18
BARSANULFO
EMPATE
18
BARSANULFO
EMPATE
18
BARSANULFO
18
BARSANULFO
18
BARSANULFO
EMPATE
18
BARSANULFO
18
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:29:11) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	i = i + 1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:29:16) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	i = i + 1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE") 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:29:25) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	i = i + 1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE") 
-- EXECUTION TIME:
3.37597
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
jogadas de eusapia:jogadas de barsanulfo:10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
jogadas de eusapia:jogadas de barsanulfo:18
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:35:33) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	i = i + 1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE") 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:35:54) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	i = i + 1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE") 
-- EXECUTION TIME:
4.49884
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:46:49) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("Barsanulfo")
else:
	print("EMPATE")
			
-- EXECUTION TIME:
2023.32
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:46:49) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("Barsanulfo")
else:
	print("EMPATE")
			
-- EXECUTION TIME:
2021.67
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:46:50) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1

	print(size(j1))
	if (soma1>soma2):
			print("EUSAPIA")
	elif (soma2>soma1):
			print("BARSANULFO")
	else:
			print("EMPATE")
-- EXECUTION TIME:
1701.1
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
task be1d99e8adb6ed47c3764e24d5940d50fb9ec6a3fa1defb960d04bdeba2b9ea9 not found: not found
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:46:50) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	else:
		print("EMPATE")
	print(size(j1))
	if (soma1>soma2):
			print("EUSAPIA")
	elif (soma2>soma1):
			print("BARSANULFO")
			
-- EXECUTION TIME:
1771.63
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:46:50) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	else:
		print("EMPATE")
	print(size(j1))
	if (soma1>soma2):
			print("EUSAPIA")
	elif (soma2>soma1):
			print("Barsanulfo")
			
-- EXECUTION TIME:
1819.62
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:46:50) 
-- CODE:
from numpy import*
j1 = array(eval(input("jogadas de eusapia:")))
j2 = array(eval(input("jogadas de barsanulfo:")))

i = 0
soma1 = 0
soma2 = 0

while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 2):
		soma1 = soma1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33): 
 		soma2 = soma2 + 1
	print(size(j1))
	if (soma1>soma2):
			print("EUSAPIA")
	elif (soma2>soma1):
			print("Barsanulfo")
	else:
			print("EMPATE")
			
-- EXECUTION TIME:
1943.44
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:05:55) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 EUSAAPIA: ")))
j2= array(eval(input("VET2 BARSANULFO: "))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma1 = soma1 +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma2 = soma2 +1
	i = i+1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 19:06:26) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 EUSAAPIA: ")))
j2= array(eval(input("VET2 BARSANULFO: "))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma1 = soma1 +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma2 = soma2 +1
	i = i+1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.493505
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
